@@ -10,6 +10,11 @@
   <adapter factory=".utils.FrequencyOfUpdatesFieldValueProvider"
               name="frequency_of_updates"/>
 
+  <adapter factory=".utils.IMSVersionControl" 
+    for="eea.indicators.content.interfaces.IAssessment" />
+  <adapter factory=".utils.IMSVersionControl" 
+    for="eea.indicators.content.interfaces.ISpecification" />
+
   <plone:portletRenderer
       portlet="eea.workflow.portlets.readiness.IReadinessPortlet"
       for="eea.indicators.content.interfaces.ISpecification"
